// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar> renders 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": undefined,
        "height": 4,
        "overflow": "hidden",
        "width": "100%",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": "100%",
      }
    }
  />
</View>
`;

exports[`<ProgressBar> when {color} 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": undefined,
        "height": 4,
        "overflow": "hidden",
        "width": "100%",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#e85a7e",
        "height": "100%",
      }
    }
  />
</View>
`;

exports[`<ProgressBar> when {progress} 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": undefined,
        "height": 4,
        "overflow": "hidden",
        "width": "100%",
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": "100%",
        "width": 0,
      }
    }
  />
</View>
`;

exports[`<ProgressBar> when {style} 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": undefined,
        "height": 4,
        "overflow": "hidden",
        "width": "100%",
      },
      Object {
        "borderRadius": 4,
        "height": 16,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": "100%",
      }
    }
  />
</View>
`;

exports[`<ProgressBar> when {trackColor} 1`] = `
<View
  onLayout={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": undefined,
        "height": 4,
        "overflow": "hidden",
        "width": "100%",
      },
      undefined,
      Object {
        "backgroundColor": "#e85a7e",
      },
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": undefined,
        "height": "100%",
        "width": 0,
      }
    }
  />
</View>
`;
